Ticket 1 erledigt. Voting geht jetzt sowohl Landscape als auch Portrait

--- a/democlient/res/values/strings.xml
+++ b/democlient/res/values/strings.xml
@@ -13,5 +13,6 @@
         <item>Client</item>
         <item>Master</item>
     </string-array>
+    <string name="switch_orientation">Bildschirm drehen</string>
 
 </resources>
