Layout weiter übernommen und Anzeige von Topics, Question und Antwort-Optionen inkl. Wechseln der Ansichten.

--- a/moodclient/res/values/strings.xml
+++ b/moodclient/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="intro">Willkommen bei <b>GroupMood</b>.\n\nZum Starten der Anwendung, scanne bitte den QR-Code des Meeting.</string>
     <string name="toast_no_scan">Es wurde nichts gescannt.</string>
     <string name="toast_no_groupmood_qrcode">Ups! Du hast keinen GroupMood-QR-Code gescannt.</string>
+    <string name="question_action_answer">Frage beantworten</string>
 </resources>
