--- a/moodclient/res/values/strings.xml
+++ b/moodclient/res/values/strings.xml
@@ -2,10 +2,9 @@
 <resources>
     <string name="app_name">GroupMood</string>
     <string name="scan">QR-Code scannen</string>
-    <string name="open_meeting">Öffne Meeting …</string>
+    <string name="loading_meeting">Lade Daten des Meetings …</string>
+    <string name="check_meeting">Prüfe Meeting …</string>
     <string name="label_settings">Einstellungen</string>
-    <string name="attendee">Teilnehmer</string>
-    <string name="chair">Leiter</string>
     <string name="intro">Willkommen bei <b>GroupMood</b>.\n\nZum Starten der Anwendung, scanne bitte den QR-Code des Meeting.</string>
     <string name="toast_no_scan">Es wurde nichts gescannt.</string>
     <string name="toast_no_groupmood_qrcode">Ups! Du hast keinen GroupMood-QR-Code gescannt.</string>
