--- a/moodclient/res/values/strings.xml
+++ b/moodclient/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="toast_no_scan">Es wurde nichts gescannt.</string>
     <string name="toast_no_groupmood_qrcode">Ups! Du hast keinen GroupMood-QR-Code gescannt.</string>
     <string name="question_action_answer">Frage beantworten</string>
+    <string name="question_answered">Antwort gespeichert: %s</string>
 </resources>
