--- a/moodclient/res/values/strings.xml
+++ b/moodclient/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="scan">QR-Code scannen</string>
     <string name="comment">Kommentar hinzufügen</string>
     <string name="loading_meeting">Lade Daten des Meetings …</string>
+    <string name="loading_comments">Lade Kommentare …</string>
+    <string name="no_comments">Keine Kommentare vorhanden.</string>
     <string name="check_meeting">Prüfe Meeting …</string>
     <string name="label_settings">Einstellungen</string>
     <string name="intro">Willkommen bei <b>GroupMood</b>.\n\nZum Starten der Anwendung, scanne bitte den QR-Code des Meeting.</string>
@@ -19,6 +21,7 @@
     <string name="tab_comments">Kommentare</string>
     <string name="tab_result">Ergebnisse</string>
     <string name="label_result_avg">Ergebnis: %d</string>
+    
     <plurals name="label_result_numvotes">
         <item quantity="one">1 Stimme</item>
         <item quantity="other">%d Stimmen</item>
