--- a/moodclient/res/values/strings.xml
+++ b/moodclient/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="fotovote_createtopic">Foto anlegen</string>
     <string name="no_questions">Keine Fragen hinterlegt.</string>
     <string name="share_meeting">Zum Meeting einladen …</string>
-    <string name="share_meeting_text">Ich nehme gerade an diesem Meeting teil: %s.</string>
+    <string name="share_meeting_text">Ich nehme gerade an diesem Meeting teil: %s</string>
 
     <plurals name="label_result_numvotes">
         <item quantity="one">1 Stimme</item>
