Typos, Feedback von Prof. Barth eingepflegt. Fazit dazu.

--- a/documents/Projektidee.tex
+++ b/documents/Projektidee.tex
@@ -1,10 +1,11 @@
 \section{Einleitung}
 
-Heutzutage ist es üblich, dass Präsentation durch Teilnehmer bewertet werden. Dieses Feedback wird entweder durch Fragebögen oder mit Hilfe von browserbasierten Anwendungen wie z.B. \emph{joind.in}\footnote{\url{http://joind.in/}} nach einer Präsentation erfasst. Hierbei bewerten die Teilnehmer die Präsentation sowohl im Hinblick auf die didaktische Aufbereitung als auch auf "`weiche"' Faktoren wie z.B. das persönliche Auftreten des Präsentierenden. Diese Bewertung spiegelt immer den subjektiven Eindruck der Teilnehmer über den Verlauf der gesamten Präsentation wieder -- eine individuelle Bewertung einzelner Folien ist dabei nicht möglich. Um bessere und genauere Bewertungen zu erhalten, müssten diese idealerweise schon im Laufe einer Präsentation abgegeben werden können. Es fehlt also ein direkter, verzögerungsfreier Kanal um Bewertungen einer Präsentation durch deren Teilnehmer zu erfassen.
+Heutzutage ist es üblich, dass Präsentationen durch Teilnehmer bewertet werden. Dieses Feedback wird entweder durch Fragebögen oder mit Hilfe von browserbasierten Anwendungen wie z.B. \emph{joind.in}\footnote{\url{http://joind.in/}} nach einer Präsentation erfasst. Hierbei bewerten die Teilnehmer die Präsentation sowohl im Hinblick auf die didaktische Aufbereitung als auch auf "`weiche"' Faktoren wie z.B. das persönliche Auftreten des Präsentierenden. Diese Bewertung spiegelt immer den subjektiven Eindruck der Teilnehmer über den Verlauf der gesamten Präsentation wieder -- eine individuelle Bewertung einzelner Folien ist dabei nicht möglich. Um bessere und genauere Bewertungen zu erhalten, müssten diese idealerweise schon im Laufe einer Präsentation abgegeben werden können. Es fehlt also ein direkter, verzögerungsfreier Kanal um Bewertungen einer Präsentation durch deren Teilnehmer zu erfassen.
 
-Feedback muss dabei nicht auf die Bewertung einer Veranstaltung beschränkt sein. Eine interaktive Beteiligung durchbricht den üblichen Ablauf von Präsentation, bei denen eine Person vorträgt und alle anderen passiv zuhören. So kann man eine bessere Aufnahme des Themas bei den Teilnehmern erreichen. Beispiel hierfür sind Aufgaben, die von den Teilnehmern durch Auswählen einer Antwort gelöst werden, und bei denen anschließend die Ergebnisse aller Teilnehmer gemittelt dargestellt werden. Diese Art von Interaktion dient zur schnellen Kontrolle des Wissensstandes für den einzelnen, liefert aber auch dem Lehrenden einen schnellen und direkten Überblick über den Leistungsstand der Teilnehmer. Hierfür existieren schon Systeme wie \emph{QuizDom}\footnote{\url{http://www.qwizdom.com/}}, bei denen Klassenraum-Ausstattungen aber leicht mehrere tausend Euro kosten \footnote{\url{http://www.dreamav.co.uk/qwizdom_q4.html}}. Mit diesen Geräten können die Teilnehmer, nachdem die Geräte an jeden einzelnen ausgeteilt wurden, Fragen mithilfe der Tastatur auf den Geräten beantworten, die dann unmittelbar ausgewertet werden können. Ein direkter Rückkanal zum Teilnehmer existiert aber hierbei nicht.
+Feedback muss dabei nicht auf die Bewertung einer Veranstaltung beschränkt sein. Eine interaktive Beteiligung durchbricht den üblichen Ablauf von Präsentation, bei denen eine Person vorträgt und alle anderen passiv zuhören. So kann man eine bessere Aufnahme des Themas bei den Teilnehmern erreichen. Beispiel hierfür sind Aufgaben, die von den Teilnehmern durch Auswählen einer Antwort gelöst werden, und bei denen anschließend die Ergebnisse aller Teilnehmer gemittelt dargestellt werden. Diese Art von Interaktion dient zur schnellen Kontrolle des Wissensstandes für den einzelnen, liefert aber auch dem Lehrenden einen schnellen und direkten Überblick über den Leistungsstand der Teilnehmer. Hierfür existieren schon Systeme wie \emph{QuizDom}\footnote{\url{http://www.qwizdom.com/}}, bei denen Klassenraum-Ausstattungen aber leicht mehrere tausend Euro kosten\footnote{\url{http://www.dreamav.co.uk/qwizdom_q4.html}}. Mit diesen Geräten können die Teilnehmer, nachdem die Geräte an jeden Einzelnen ausgeteilt wurden, Fragen mithilfe der Tastatur auf den Geräten beantworten, die dann unmittelbar ausgewertet werden können. Ein direkter Rückkanal zum Teilnehmer existiert aber hierbei nicht.
 
 \section{Gruppenbefragung}
+\label{l:gruppenbefragung}
 
 Gerade bei jüngeren Personen und im Business-Umfeld sind SmartPhones inzwischen sehr weit verbreitet -- \emph{GroupMood} schafft für Teilnehmer die Möglichkeit, Veranstaltungen jeder Art auf dem eigenen mobilen Endgerät direkt zu bewerten. Dadurch sind die Teilnehmer in der Lage direkt in jeder Veranstaltung individuelles Feedback zu geben, dass dann unmittelbar ausgewertet und analysiert werden kann. 
 
