--- a/documents/technische-umsetzung.tex
+++ b/documents/technische-umsetzung.tex
@@ -1,6 +1,6 @@
 \section{Aufbau der Anwendung}
 
-Aus den im vorigen Abschnitt genannten Funktionen lassen sich die folgenden Anforderungen an die Anwendung ableiten: Es muss möglich sein, Veranstaltungen anzulegen und zu diesen Veranstaltungen wiederum Fragen, die von Teilnehmern dieser Veranstaltung beantwortet werden können. Das Antworten soll dabei während der Veranstaltung möglich sein, die Auswertung der Ergebnisse während und nach der Veranstaltung. Die Fragen müssen in eine zeitliche Reihenfolge gebracht werden können. Zur Bewertung der Präsentation sollten deren Folien in der Anwendung verfügbar sein. Zusätzlich ist es wünschenswert auch freie Kommentar zu Veranstaltungen zu erhalten, die Teilnehmer können so z.B. auf Fehler in einer Präsentation hinweisen oder unklare Aspekte aufzeigen.
+Aus den im vorigen Abschnitt genannten Funktionen lassen sich die folgenden Anforderungen an die Anwendung ableiten: Es muss möglich sein, Veranstaltungen anzulegen und zu diesen Veranstaltungen wiederum Fragen, die von Teilnehmern dieser Veranstaltung beantwortet werden können. Das Antworten soll dabei während der Veranstaltung möglich sein, die Auswertung der Ergebnisse während und nach der Veranstaltung. Die Fragen müssen in eine zeitliche Reihenfolge gebracht werden können. Zur Bewertung der Präsentation sollten deren Folien in der Anwendung verfügbar sein. Zusätzlich ist es wünschenswert auch freie Kommentare zu Veranstaltungen zu erhalten, die Teilnehmer können so z.B. auf Fehler in einer Präsentation hinweisen oder unklare Aspekte aufzeigen.
 
 \subsection{Datenmodell}
 
@@ -12,15 +12,15 @@ Aus den im vorigen Abschnitt genannten Funktionen lassen sich die folgenden Anfo
 \label{f:models}
 \end{figure}
 
-\emph{GroupMood} wurde so entwickelt, dass, in eine gewissen Rahmen, beliebige Anwendungsfälle abgebildet werden können. Abbildung~\ref{f:models} zeigt das zugrundeliegende Datenmodell. Die Basis bildet hierbei immer ein \emph{Meeting}, also ein Zusammentreffen von mehreren Personen. Im Verlauf dieses Meetings können verschiedene Arten von Fragen (\emph{Question}) gestellt werden, wobei eigentlich nur zwei Arten von Fragen auftreten. Bei \emph{Von-Bis-Fragen} wählt der Teilnehmer die Antwort auf einem vorgegebenen Zahlenbereich aus. Es kann sich dabei um eine Jahreszahl handeln, z.B. "`Wann ist Napoleon gestorben? Wählen Sie zwischen 1800 und 1900"' oder auch um die Frage nach einer Bewertung "`Wie gut hat ihnen diese Veranstaltung gefallen? Wählen Sie auf einer Skala von 1 bis 10"'. Bei \emph{Auswahl-Fragen} ist der Freiheitsgrad soweit eingeschränkt, dass die Antwort aus einer Auswahl von Antwortmöglichkeiten (\emph{Choice}) ausgewählt werden muss, z.B. "`Wie heißt der aktuelle Bundespräsident? Johannes Rau, Horst Köhler oder Christian Wulff"'. Bei diesem Typ ist es üblich auch mehrere Antwortmöglichkeiten zu zu lassen, z.B. "`Albert Einstein war: Deutscher, vom Sternzeichen Löwe, Physiker. Wählen Sie alle korrekten Antworten"'.
+\emph{GroupMood} wurde so entwickelt, dass, in einem gewissen Rahmen, beliebige Anwendungsfälle abgebildet werden können. Abbildung~\ref{f:models} zeigt das zugrundeliegende Datenmodell. Die Basis bildet hierbei immer ein \emph{Meeting}, also ein Zusammentreffen von mehreren Personen. Im Verlauf dieses Meetings können verschiedene Arten von Fragen (\emph{Question}) gestellt werden, wobei eigentlich nur zwei Arten von Fragen auftreten. Bei \emph{Von-Bis-Fragen} wählt der Teilnehmer die Antwort auf einem vorgegebenen Zahlenbereich aus. Es kann sich dabei um eine Jahreszahl handeln, z.B. "`Wann ist Napoleon gestorben? Wählen Sie zwischen 1800 und 1900"' oder auch um die Frage nach einer Bewertung "`Wie gut hat ihnen diese Veranstaltung gefallen? Wählen Sie auf einer Skala von 1 bis 10"'. Bei \emph{Auswahl-Fragen} ist der Freiheitsgrad soweit eingeschränkt, dass die Antwort aus einer Auswahl von Antwortmöglichkeiten (\emph{Choice}) ausgewählt werden muss, z.B. "`Wie heißt der aktuelle Bundespräsident? Johannes Rau, Horst Köhler oder Christian Wulff"'. Bei diesem Typ ist es üblich auch mehrere Antwortmöglichkeiten zu zu lassen, z.B. "`Albert Einstein war: Deutscher, vom Sternzeichen Löwe, Physiker. Wählen Sie alle korrekten Antworten"'.
 
-Wie oft eine Antwort pro Teilnehmer dabei abgegeben werden kann, lässt sich ebenfalls mit nur zwei Fällen umfassend beschreiben. So können Antworten entweder einmal pro Frage und Teilnehmern abgegeben werden, oder ständig. Letzteres macht nur bei \emph{Von-Bis-Fragen} Sinn, da hier die abgegebenen Antworten gemittelt werden. Diese Art von Frage ermöglicht die laufende Bewertung eines Meetings, bei denen die Teilnehmer während des Meetings ihre Bewertung jederzeit anpassen können. Tabelle~\ref{table:questiontypes} liefert eine Übersicht über die möglichen Fragetypen und die jeweiligen Einstellungen mit denen diese konfiguriert werden.
+Wie oft eine Antwort pro Teilnehmer dabei abgegeben werden kann, lässt sich ebenfalls mit nur zwei Fällen umfassend beschreiben. So können Antworten entweder einmal pro Frage und Teilnehmern abgegeben werden, oder ständig. Mit der Möglichkeit die Antwort ständig zu ändern kann z.B. die laufende Bewertung eines Meetings abgebildet werden, bei der die Teilnehmer während des Meetings ihre Bewertung jederzeit anpassen können. Tabelle~\ref{table:questiontypes} liefert eine Übersicht über die möglichen Fragetypen und die jeweiligen Einstellungen mit denen diese konfiguriert werden.
 
 Um Fragen im Verlauf einer Veranstaltung passend anzeigen zu können, müssen diese in eine Reihenfolge gebracht werden können. Die Reihenfolge der Fragen wird dabei mit Hilfe von Themen (\emph{Topic}) gruppiert. Ein Thema kann dabei das gesamte Meeting, aber auch eine einzelne Präsentationsfolie sein. So ist es möglich den Ablauf der einzelnen Fragen flexibel fest zu legen und an den jeweiligen Anwendungsfall an zu passen. Zusätzlich ist es möglich, einem Thema ein Bild zu zuweisen, so dass hierüber die Bewertung von Folien einer Präsentation möglich ist.
 
 Neben der Fragen gibt es mit Freitext-Kommentare (\emph{Comment}) eine weitere Möglichkeit, Feedback zu hinterlassen. Kommentare werden dabei wie die Fragen immer zu Themen abgegeben.
 
-Mithilfe von \emph{Flags}, die auf dem Meeting gesetzt werden können, ist es Möglich das Verhalten der App anzupassen, die dann bestimmte Zusatzfunktionen anzeigen kann. Beispielsweise gibt es für die Teilnehmer einer Foto-Abstimmung die Möglichkeit, selber Themen mit Bildern anzulegen.
+Mithilfe von Zusatzinformationen (\emph{Flags}), die auf dem Meeting gesetzt werden können, ist es möglich das Verhalten der Anwendung anzupassen. Ist z.B. das Flag \texttt{fotovote} gesetzt, wird signalisiert, dass es sich bei dem Meeting um eine Foto-Abstimmung handelt. Dadurch ist es serverseitig möglich, neue Themen anzulegen, wobei ein Thema einem Foto entspricht. Zu jedem Thema wird automatisch eine Wertebereichs-Frage zur Bewertung des Fotos angelegt. In der App werden bei diesen Meetings zusätzliche UI-Elemente angezeigt, die es den Teilnehmern der Foto-Abstimmung ermöglichen, direkt aus der App weitere Fotos hinzuzufügen.
 
 \begin{table}
 \begin{center}
@@ -49,7 +49,7 @@ Bewertung & range & average & --- & --- & $\geq$0 & >min \\
 \label{f:system}
 \end{figure}
 
-Mit \emph{GroupMood} sollen vielen Teilnehmer gleichzeitig an Umfragen teilnehmen können. Um die theoretisch sehr große Anzahl gleichzeitiger Anfragen performant verarbeiten zu können, findet die Kommunikation zwischen den einzelnen Teilnehmern über einen Server statt. Dort werden auch die erzeugten Daten in einer Datenbank gespeichert. Die App greift auf diese Daten über eine \emph{RESTful} HTTP-Schnittstelle zu. Um eine saubere Trennung zwischen GUI-Code und dem Zugriff auf den Server zu erreichen findet jegliche Kommunikation in einem \emph{RemoteService} statt, der von den einzelnen \emph{Activities} der App gebunden wird. In Abbildung~\ref{f:system}  ist der Aufbau des Systems schematisch dargestellt. Die App ist dabei nicht an die Verwendung eines bestimmten Servers gebunden -- sie akzeptiert URLs mit dem Protokoll \texttt{grpmd}, bzw. \texttt{grpmd+ssl} und verwendet diese, um daraus die HTTP(S)-URL zum Server zu generieren (siehe Tabelle~\ref{table:urlschema}).
+Mit \emph{GroupMood} sollen vielen Teilnehmer gleichzeitig an Umfragen teilnehmen können. Um die theoretisch sehr große Anzahl gleichzeitiger Anfragen performant verarbeiten zu können, findet die Kommunikation zwischen den einzelnen Teilnehmern über einen Server auf Django\footnote{\url{https://www.djangoproject.com/}}-Basis statt. Dort werden auch die erzeugten Daten in einer Datenbank gespeichert. Die App greift auf diese Daten über eine \emph{RESTful} HTTP-Schnittstelle zu. Um eine saubere Trennung zwischen GUI-Code und dem Zugriff auf den Server zu erreichen findet jegliche Kommunikation in einem \emph{RemoteService} statt, der von den einzelnen \emph{Activities} der App gebunden wird. In Abbildung~\ref{f:system}  ist der Aufbau des Systems schematisch dargestellt. Die App ist dabei nicht an die Verwendung eines bestimmten Servers gebunden -- sie akzeptiert URLs mit dem Protokoll \texttt{grpmd}, bzw. \texttt{grpmd+ssl} und verwendet diese, um daraus die HTTP(S)-URL zum Server zu generieren (siehe Tabelle~\ref{table:urlschema}).
 
 \begin{table}[htb]
 \begin{center}
